organizing the old version files

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 
-Theme Name: Caio Nunes Portfolio
-Description: Theme I made for my portfolio website.
-Version: 1.0
+Theme Name: caionunes.dev
+Description: Custom theme for https://caionunes.dev/.
+Version: 1.0.0
 Author: Caio Nunes
 Author URI: https://caionunes.dev
 
