--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 /*
 
-Theme Name: caionunes.dev
-Description: Custom theme for https://caionunes.dev/.
-Version: 1.0.0
-Author: Caio Nunes
-Author URI: https://caionunes.dev
+    Theme Name: caionunes.dev
+    Description: Theme developed by myself to achieve design and features I wanted to implement in my portfolio.
+    Version: 1.1.0
+    Author: Caio Nunes
+    Author URI: https://caionunes.dev/
+
+	License: GPL-3.0
+	License URI: http://www.opensource.org/licenses/gpl-license.php
+
+	Text Domain: cn-dev
 
 */
