--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,12 @@ html {
 
 /* Colors */ 
 :root {
-    --primary-color: #0f0f0f;
+    --primary-color: #080708;
+	--cndev-blue: #14213D;
+	--cndev-darker-blue: #010b21;
+	--cndev-red: #DF2935;
+	--cndev-yellow: #FDCA40;
+	--cndev-grey: #E6E8E6;
 }
 
 /* Media queries functions */
@@ -33,26 +38,74 @@ html {
         @content;
     }
 }
+section {
+	padding-right: 70px;
+	padding-left: 70px;
+
+	@include tablet {
+		padding-right: 50px;
+		padding-left: 50px;
+	}
+	@include mobile {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+	article {
+		width: 100%;
+		max-width: 1400px;
+		margin: 0 auto;
+	}
+}
+.section-title {
+	margin-bottom: 80px;
+	text-align: center;
+	font-size: 50px;
+
+	&::after {
+		content: '';
+		margin-top: 20px;
+		display: block;
+		width: 100%;
+		height: 1px;
+		background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
+	}
+}
 
 .cndev {
     font-family: 'Open Sans', sans-serif;
     color: #fff;
     font-size: 18px;
-    height: 100dvh;
+    min-height: 100dvh;
     width: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    padding-bottom: 200vh;
+
+	&_button {
+		padding: 10px 14px;
+		border: 1px solid #fff;
+		border-radius: 30px;
+		cursor: pointer;
+		transition: all 200ms linear;
+		&:hover {
+			background: #fff;
+			color: var(--primary-color);
+		}
+		&.active {
+			background: #fff;
+			color: var(--primary-color);
+		}
+	}
 
     li {
         list-style: none;
     }
-    
     a {
         text-decoration: none;
         color: inherit;
+		transition: all 200ms linear;
     }
+
 
     &_particles {
         position: fixed;
@@ -61,10 +114,11 @@ html {
         z-index: -1;
         width: 100%;
         height: 100%;
-        background: linear-gradient(180deg, #21211b 0%, #0f0f0f 100%);
+        background: linear-gradient(180deg, #21211b 0%, #0f0f0f 45%);
 
         canvas {
             display: block;
+			position: relative;
         }
     }
 
@@ -77,36 +131,88 @@ html {
         justify-content: center;
         align-items: center;
         padding: 10px 70px;
-        transition: all 200ms linear;
-
-        &.small {
-            height: 70px;
-            background: var(--primary-color);
-        }
+		z-index: 10;
 
         @include tablet {
             padding: 10px 40px;
         }
-
         @include mobile {
             padding: 10px 20px;
         }
-
-        &--inner {
+		&--inner {
+			width: 100%;
+			max-width: 1000px;
+			border-radius: 50px;
+			padding: 0 30px;
+			transition: background 200ms linear;
+		}
+        &--content {
             width: 100%;
             display: flex;
-            justify-content: space-between;
-        }
-
-        &--nav,
-        &--nav ul {
-            display: flex;
-            gap: 10px;
             justify-content: center;
+			align-items: center;
+        }
+		&--nav, &--logo, &--contact {
+			width: 100%;
+			max-width: 33.3%;
+			display: flex;
+		}
+		&--nav, &--contact {
+			transition: all 200ms linear;
+			opacity: 0;
+			visibility: hidden;
+			display: none;
+		}
+		&--nav {
+			justify-content: end;
+		}
+		&--logo {
+			justify-content: center;
+			.cndev_logo {
+				cursor: pointer;
+			}
+		}
+		&--contact {
+			justify-content: end;
+			a {
+				border: 1px solid #fff;
+				padding: 8px 18px;
+				border-radius: 30px;
+			}
+			a:hover {
+				background: #fff;
+				color: var(--primary-color);
+			}
+		}
+		&--nav,
+        &--nav ul {
+            gap: 10px;
             align-items: center;
             transition: all 200ms linear;
         }
-
+		&--nav ul {
+            display: flex;
+            justify-content: center;
+		}
+		&.small {
+			.cndev_header {
+				&--inner {    
+					backdrop-filter: blur(20px);
+					background: #0807083b;
+				}
+				&--content {
+					justify-content: space-between;
+				}
+				&--logo {
+					justify-content: start;
+				}
+				&--nav, &--contact {
+					opacity: 1;
+					visibility: visible;
+					display: flex;
+				}
+			}
+        }
     }
     &.admin-bar &_header {
         top: 32px;
@@ -122,23 +228,222 @@ html {
             text-align: center;
             position: fixed;
 
+			&--inner {
+				max-width: 1000px;
+			}
+
             .fade-out-effect {
 				position: relative;
-                font-size: 72px;
-				font-weight: bold;
+				font-size: 46px;
+				font-weight: 700;
+				line-height: 1.7em;
 				width: fit-content;
 				height: fit-content;
 				transition: all 0.3s;
+
+				h1 {
+					text-shadow: 0 0 15px #000000;
+					&::after {
+						content: '';
+						margin-top: 20px;
+						display: block;
+						width: 100%;
+						height: 1px;
+						background: linear-gradient(90deg, #00000000 15%, #ffffffa2 50%, #00000000 85%);
+					}
+				}
+				.buttons {
+					margin-top: 30px;
+					width: 100%;
+					display: flex;
+					justify-content: center;
+					gap: 20px;
+
+					a {
+						font-size: 20px;
+						line-height: 1em;
+						font-weight: 600;
+						padding: 18px 24px;
+						border-radius: 30px;
+						border: 1px solid #fff;
+						transition: all 200ms linear;
+					}
+					a:hover {
+						background: #fff;
+						color: var(--primary-color);
+					}
+				}
             }
         }
+		&_about {
+            margin-top: 115vh;
+			// backdrop-filter: blur(20px);
+			background: #08070882;
+			min-height: 100vh;
+			background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
+			
+			&--title {
+				h2 {
+					margin-bottom: 25px;
+					text-align: center;
+					font-size: 50px;
+
+					&::after {
+						content: '';
+						margin-top: 20px;
+						display: block;
+						width: 100%;
+						height: 1px;
+						background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
+					}
+				}
+			}
+			&--content {
+				display: flex;
+				align-items: stretch;
+				justify-content: center;
+				flex-wrap: wrap;
+
+				.left, .right {
+					width: 40%;
+				}
+				.left {
+					display: flex;
+					justify-content: center;
+					img {
+						object-fit: cover;
+						height: 100%;
+						width: 100%;
+						max-width: 350px;
+						border: 1px solid #fff;
+						border-radius: 50%;
+					}
+				}
+				.right {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					h3 {
+						font-size: 42px;
+						min-height: 60px;
+						margin-bottom: 10px;
+					}
+					p {
+						font-size: 20px;
+						line-height: 1.7em;
+						&::before {
+							content: '';
+							margin: 15px 0 20px;
+							display: block;
+							width: 100%;
+							height: 1px;
+							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 50%);
+						}
+					}
+					.cndev_social_icons {
+						margin-bottom: 10px;
+						&::before {
+							content: '';
+							margin: 20px 0;
+							display: block;
+							width: 100%;
+							height: 1px;
+							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 30%);
+						}
+						ul {
+							display: flex;
+							gap: 10px;
+
+							i {
+								font-size: 24px;
+							}
+						}
+					}
+				}
+				.cndev_content_selector {
+					width: 100%;
+					display: flex;
+					justify-content: center;
+					gap: 20px;
+					margin-bottom: 80px;
+
+					span {
+						padding: 10px 14px;
+						border: 1px solid #fff;
+						border-radius: 30px;
+						cursor: pointer;
+
+						&.active {
+							background: #fff;
+							color: var(--primary-color);
+						}
+					}
+				}
+			}
+
+		}
+		&_about,
         &_content {
-            margin-top: 100vh;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			position: relative;
+			z-index: 1;
         }
+		&_content {
+			background: var(--cndev-darker-blue);
+			color: #fff;
+		}
     }
-    footer {
-        margin-top: auto;
-        height: 500dvh;
-        width: 100%;
-    }
-    
+
+	&_projects {
+		display: flex;
+		gap: 20px;
+		
+		.project-wrap {
+			background: #fff;
+			border-radius: 15px;
+			padding: 20px;
+			box-shadow: 0px 0px 15px -2px #00000030;
+			display: flex;
+			flex-direction: column;
+			gap: 20px;
+			width: 100%;
+
+			.project-title-group {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+
+				.project-technologies {
+					display: flex;
+					gap: 10px;
+
+					.tech {
+						background: var(--cndev-blue);
+						padding: 5px 8px;
+						color: #fff;
+						font-size: 14px;
+						border-radius: 5px;
+					}
+				}
+			}
+			.project-images-group {
+				img {
+					width: 100%;
+					height: auto;
+				}
+			}
+			.project-link {
+				a {
+					background: var(--cndev-red);
+					padding: 8px 12px;
+					border-radius: 10px;
+					color: #fff;
+					display: block;
+					width: fit-content;
+				}
+			}
+		}
+	}
 }
