--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,10 @@ html {
 	--cndev-yellow: #FDCA40;
 	--cndev-grey: #E6E8E6;
 }
+::selection {
+	color: var(--primary-color);
+	background: #fff;
+}
 
 /* Media queries functions */
 @mixin desktop {
@@ -26,18 +30,27 @@ html {
         @content;
     }
 }
-
 @mixin tablet {
     @media (min-width: 481px) and (max-width: 1023px) {
         @content;
     }
 }
-
 @mixin mobile {
     @media (max-width: 480px) {
         @content;
     }
 }
+
+/* Animations */
+@mixin animate($animation,$duration,$method,$times){
+    animation: $animation $duration $method $times;
+}
+@mixin keyframes($name){
+    @keyframes #{$name}{
+        @content;
+    }
+}
+/* Styles */
 section {
 	padding-right: 70px;
 	padding-left: 70px;
@@ -57,18 +70,8 @@ section {
 	}
 }
 .section-title {
-	margin-bottom: 80px;
 	text-align: center;
 	font-size: 50px;
-
-	&::after {
-		content: '';
-		margin-top: 20px;
-		display: block;
-		width: 100%;
-		height: 1px;
-		background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
-	}
 }
 
 .cndev {
@@ -81,13 +84,43 @@ section {
     display: flex;
     flex-direction: column;
 
+	&_adm {
+		width: fit-content;
+		height: 100px;
+		position: fixed;
+		z-index: 999999;
+		top: 0;
+		right: 20px;
+		display: flex;
+		align-items: center;
+
+		ul {
+			width: 100%;
+			padding: 8px 14px;
+			display: flex;
+			gap: 12px;
+			font-size: 16px;
+			justify-content: space-between;
+			backdrop-filter: blur(20px);
+			background: #0807087a;
+			border-radius: 20px;
+			opacity: 0.5;
+			transition: all 200ms linear;
+		}
+		ul:hover {
+			opacity: 1;
+		}
+	}
+
 	&_button {
 		padding: 10px 14px;
 		border: 1px solid #fff;
 		border-radius: 30px;
 		cursor: pointer;
 		transition: all 200ms linear;
+		backdrop-filter: blur(20px);
 		&:hover {
+			box-shadow: 0 0 2px 2px var(--primary-color);
 			background: #fff;
 			color: var(--primary-color);
 		}
@@ -111,14 +144,35 @@ section {
         position: fixed;
         top: 0;
         left: 0;
-        z-index: -1;
+		z-index: -2;
         width: 100%;
         height: 100%;
-        background: linear-gradient(180deg, #21211b 0%, #0f0f0f 45%);
+        // background: linear-gradient(180deg, #21211b 0%, #0f0f0f 45%);
 
+		.overlay {
+			&.top {
+				position: fixed;
+				top: 0;
+				left: 0;
+				width: 100vw;
+				height: 100vh;
+				z-index: -2;
+				background: linear-gradient(180deg, #21211b 0%, #0f0f0f 45%);
+			}
+			&.bottom {
+				position: fixed;
+				bottom: 0;
+				left: 0;
+				width: 100vw;
+				height: 100vh;
+				background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(8, 7, 8, 0.7960784314) 50%, var(--cndev-darker-blue) 100%);
+				z-index: -1;
+			}
+		}
         canvas {
             display: block;
 			position: relative;
+			z-index: -2;
         }
     }
 
@@ -140,31 +194,24 @@ section {
             padding: 10px 20px;
         }
 		&--inner {
-			width: 100%;
+			width: 135px;
 			max-width: 1000px;
 			border-radius: 50px;
 			padding: 0 30px;
-			transition: background 200ms linear;
+			transition: width 250ms linear, background 250ms linear;
 		}
         &--content {
             width: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
 			align-items: center;
         }
-		&--nav, &--logo, &--contact {
-			width: 100%;
-			max-width: 33.3%;
-			display: flex;
-		}
-		&--nav, &--contact {
-			transition: all 200ms linear;
-			opacity: 0;
-			visibility: hidden;
-			display: none;
-		}
 		&--nav {
 			justify-content: end;
+			visibility: hidden;
+			opacity: 0;    
+			position: relative;
+			transform: translateY(50px);
 		}
 		&--logo {
 			justify-content: center;
@@ -172,44 +219,57 @@ section {
 				cursor: pointer;
 			}
 		}
-		&--contact {
-			justify-content: end;
-			a {
-				border: 1px solid #fff;
-				padding: 8px 18px;
-				border-radius: 30px;
-			}
-			a:hover {
-				background: #fff;
-				color: var(--primary-color);
-			}
-		}
 		&--nav,
         &--nav ul {
-            gap: 10px;
-            align-items: center;
-            transition: all 200ms linear;
+			align-items: center;
+			justify-content: center;
         }
 		&--nav ul {
+			gap: 30px;
             display: flex;
-            justify-content: center;
+            transition: all 200ms linear;
+			a {
+				cursor: pointer;
+				font-size: 20px;
+				font-weight: 100;
+				text-transform: uppercase;
+			}
 		}
-		&.small {
+		&--scroll {
+			visibility: hidden;
+			opacity: 0;
+			i {
+				cursor: pointer;
+			}
+		}
+		&.scrolled {
 			.cndev_header {
-				&--inner {    
-					backdrop-filter: blur(20px);
-					background: #0807083b;
-				}
 				&--content {
 					justify-content: space-between;
+				}
+				&--inner {
+					width: 1000px;
+					background: linear-gradient(360deg, #0807082a, #00000000);
+					backdrop-filter: blur(20px);
+				}
+				&--logo, &--scroll {
+					width: 10%;
 				}
 				&--logo {
 					justify-content: start;
 				}
-				&--nav, &--contact {
+				&--nav {
+					width: 100%;
 					opacity: 1;
 					visibility: visible;
-					display: flex;
+					transform: translateY(0);
+					transition: opacity 500ms 450ms linear;
+				}
+				&--scroll {
+					visibility: visible;
+					opacity: 1;
+					text-align: end;
+					transition: opacity 500ms 450ms linear;
 				}
 			}
         }
@@ -242,7 +302,6 @@ section {
 				transition: all 0.3s;
 
 				h1 {
-					text-shadow: 0 0 15px #000000;
 					&::after {
 						content: '';
 						margin-top: 20px;
@@ -277,124 +336,128 @@ section {
         }
 		&_about {
             margin-top: 115vh;
-			// backdrop-filter: blur(20px);
-			background: #08070882;
 			min-height: 100vh;
-			background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
-			
-			&--title {
-				h2 {
-					margin-bottom: 25px;
-					text-align: center;
-					font-size: 50px;
-
-					&::after {
-						content: '';
-						margin-top: 20px;
-						display: block;
-						width: 100%;
-						height: 1px;
-						background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
-					}
-				}
-			}
-			&--content {
-				display: flex;
-				align-items: stretch;
-				justify-content: center;
-				flex-wrap: wrap;
-
-				.left, .right {
-					width: 40%;
-				}
-				.left {
-					display: flex;
-					justify-content: center;
-					padding-right: 75px;
-					img {
-						object-fit: cover;
-						height: 100%;
-						width: 100%;
-						// max-width: 350px;
-						border: 1px solid #fff;
-						// border-radius: 50%;
-					}
-				}
-				.right {
-					display: flex;
-					flex-direction: column;
-					justify-content: space-between;
-					h3 {
-						font-size: 42px;
-						min-height: 60px;
-						margin-bottom: 10px;
-						font-family: monospace;
-					}
-					p {
-						font-size: 20px;
-						line-height: 1.7em;
-						&::before {
-							content: '';
-							margin: 15px 0 20px;
-							display: block;
-							width: 100%;
-							height: 1px;
-							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 50%);
-						}
-					}
-					.cndev_social_icons {
-						margin-bottom: 10px;
-						&::before {
-							content: '';
-							margin: 20px 0;
-							display: block;
-							width: 100%;
-							height: 1px;
-							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 30%);
-						}
-						ul {
-							display: flex;
-							gap: 10px;
-
-							i {
-								font-size: 24px;
-							}
-						}
-					}
-				}
-				.cndev_content_selector {
-					width: 100%;
-					display: flex;
-					justify-content: center;
-					gap: 20px;
-					margin-bottom: 50px;
-
-					span {
-						padding: 10px 14px;
-						border: 1px solid #fff;
-						border-radius: 30px;
-						cursor: pointer;
-
-						&.active {
-							background: #fff;
-							color: var(--primary-color);
-						}
-					}
-				}
-			}
-
-		}
-		&_about,
-        &_content {
+			// background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
 			width: 100%;
 			display: flex;
 			align-items: center;
 			position: relative;
 			z-index: 1;
-        }
-		&_content {
-			background: var(--cndev-darker-blue);
-			color: #fff;
+			
+			&--title {
+				display: flex;
+				flex-wrap: wrap;
+				width: 100%;
+				justify-content: center;
+				align-items: center;
+				gap: 20px 80px;
+				position: relative;
+				margin-bottom: 30px;
+
+				&::after {
+					content: '';
+					display: block;
+					width: 100%;
+					height: 1px;
+					background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
+				}
+
+				h2 {
+					text-align: center;
+					font-size: 50px;
+					width: 100%;
+					max-width: 450px;
+				}
+
+				i {
+					font-size: 24px;
+					cursor: pointer;
+					&:hover {
+						transform: scale(1.1);
+					}
+				}
+			}
+			&--content {
+				.about {
+					display: flex;
+					align-items: stretch;
+					justify-content: center;
+					flex-wrap: wrap;
+					.selector {
+						width: 100%;
+						ul {
+							display: flex;
+							justify-content: center;
+							gap: 20px;
+							margin-bottom: 50px;
+						}
+					}
+					.left, .right {
+						width: 40%;
+					}
+					.left {
+						display: flex;
+						justify-content: center;
+						padding-right: 75px;
+						img {
+							object-fit: cover;
+							height: 100%;
+							width: 100%;
+							// max-width: 350px;
+							border: 1px solid #fff;
+							// border-radius: 50%;
+						}
+					}
+					.right {
+						display: flex;
+						flex-direction: column;
+						justify-content: space-between;
+						h3 {
+							font-size: 42px;
+							min-height: 60px;
+							margin-bottom: 10px;
+							font-family: monospace;
+						}
+						.separator{
+							&::before {
+								content: '';
+								margin: 15px 0 20px;
+								display: block;
+								width: 100%;
+								height: 1px;
+								background: linear-gradient(90deg, #ffffffa2 0%, #00000000 50%);
+							}
+						}
+						p {
+							display: none;
+							font-size: 20px;
+							line-height: 1.7em;
+						}
+						.cndev_social_icons {
+							&::before {
+								content: '';
+								margin: 20px 0;
+								display: block;
+								width: 100%;
+								height: 1px;
+								background: linear-gradient(90deg, #ffffffa2 0%, #00000000 30%);
+							}
+							ul {
+								display: flex;
+								gap: 10px;
+
+								i {
+									font-size: 24px;
+								}
+							}
+						}
+					}
+				} // #about - END
+				.projects {
+					display: none;
+				}
+			}
+
 		}
     }
 
@@ -469,5 +532,14 @@ section {
 			font-size: 14px;
 			font-weight: 300;
 		}
+	}
+
+	&_404 {
+		width: 100dvw;
+		height: 100dvh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
 	}
 }
