--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -139,7 +139,6 @@ section {
 		transition: all 200ms linear;
     }
 
-
     &_particles {
         position: fixed;
         top: 0;
@@ -174,7 +173,7 @@ section {
 			position: relative;
 			z-index: -2;
         }
-    }
+    } // &_particles - END
 
     &_header {
         width: 100%;
@@ -242,44 +241,52 @@ section {
 				cursor: pointer;
 			}
 		}
-		&.scrolled {
-			.cndev_header {
-				&--content {
-					justify-content: space-between;
-				}
-				&--inner {
-					width: 1000px;
-					background: linear-gradient(360deg, #0807082a, #00000000);
-					backdrop-filter: blur(20px);
-				}
-				&--logo, &--scroll {
-					width: 10%;
-				}
-				&--logo {
-					justify-content: start;
-				}
-				&--nav {
-					width: 100%;
-					opacity: 1;
-					visibility: visible;
-					transform: translateY(0);
-					transition: opacity 500ms 450ms linear;
-				}
-				&--scroll {
-					visibility: visible;
-					opacity: 1;
-					text-align: end;
-					transition: opacity 500ms 450ms linear;
+    } // &_header
+
+    &_section {
+		min-height: 100vh;
+		// background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
+		width: 100%;
+		display: flex;
+		align-items: center;
+		position: relative;
+		z-index: 1;
+
+		&--title {
+			display: flex;
+			flex-wrap: wrap;
+			width: 100%;
+			justify-content: center;
+			align-items: center;
+			gap: 20px 80px;
+			position: relative;
+			margin-bottom: 30px;
+
+			&::after {
+				content: '';
+				display: block;
+				width: 100%;
+				height: 1px;
+				background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
+			}
+
+			h2 {
+				text-align: center;
+				font-size: 50px;
+				width: 100%;
+				max-width: 450px;
+			}
+
+			i {
+				font-size: 24px;
+				cursor: pointer;
+				&:hover {
+					transform: scale(1.1);
 				}
 			}
-        }
-    }
-    &.admin-bar &_header {
-        top: 32px;
-    }
+		} // &--title
 
-    &_home {
-        &_hero {
+        &[data-content="hero"] {
             width: 100dvw;
             height: 100dvh;
             display: flex;
@@ -288,7 +295,7 @@ section {
             text-align: center;
             position: fixed;
 
-			&--inner {
+			.cndev_section--inner {
 				max-width: 1000px;
 			}
 
@@ -332,134 +339,88 @@ section {
 						color: var(--primary-color);
 					}
 				}
-            }
-        }
-		&_about {
+            } // fade-out-effect
+        } // &[data-content="hero"]
+		&[data-content="about"] {
             margin-top: 115vh;
-			min-height: 100vh;
-			// background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
-			width: 100%;
-			display: flex;
-			align-items: center;
-			position: relative;
-			z-index: 1;
 			
-			&--title {
+			.cndev_section--content {
 				display: flex;
-				flex-wrap: wrap;
-				width: 100%;
+				align-items: stretch;
 				justify-content: center;
-				align-items: center;
-				gap: 20px 80px;
-				position: relative;
-				margin-bottom: 30px;
-
-				&::after {
-					content: '';
-					display: block;
+				flex-wrap: wrap;
+				.selector {
 					width: 100%;
-					height: 1px;
-					background: linear-gradient(90deg, #00000000 25%, #ffffffa2 50%, #00000000 75%);
-				}
-
-				h2 {
-					text-align: center;
-					font-size: 50px;
-					width: 100%;
-					max-width: 450px;
-				}
-
-				i {
-					font-size: 24px;
-					cursor: pointer;
-					&:hover {
-						transform: scale(1.1);
-					}
-				}
-			}
-			&--content {
-				.about {
-					display: flex;
-					align-items: stretch;
-					justify-content: center;
-					flex-wrap: wrap;
-					.selector {
-						width: 100%;
-						ul {
-							display: flex;
-							justify-content: center;
-							gap: 20px;
-							margin-bottom: 50px;
-						}
-					}
-					.left, .right {
-						width: 40%;
-					}
-					.left {
+					ul {
 						display: flex;
 						justify-content: center;
-						padding-right: 75px;
-						img {
-							object-fit: cover;
-							height: 100%;
-							width: 100%;
-							// max-width: 350px;
-							border: 1px solid #fff;
-							// border-radius: 50%;
-						}
+						gap: 20px;
+						margin-bottom: 50px;
 					}
-					.right {
-						display: flex;
-						flex-direction: column;
-						justify-content: space-between;
-						h3 {
-							font-size: 42px;
-							min-height: 60px;
-							margin-bottom: 10px;
-							font-family: monospace;
-						}
-						.separator{
-							&::before {
-								content: '';
-								margin: 15px 0 20px;
-								display: block;
-								width: 100%;
-								height: 1px;
-								background: linear-gradient(90deg, #ffffffa2 0%, #00000000 50%);
-							}
-						}
-						p {
-							display: none;
-							font-size: 20px;
-							line-height: 1.7em;
-						}
-						.cndev_social_icons {
-							&::before {
-								content: '';
-								margin: 20px 0;
-								display: block;
-								width: 100%;
-								height: 1px;
-								background: linear-gradient(90deg, #ffffffa2 0%, #00000000 30%);
-							}
-							ul {
-								display: flex;
-								gap: 10px;
-
-								i {
-									font-size: 24px;
-								}
-							}
-						}
-					}
-				} // #about - END
-				.projects {
-					display: none;
 				}
-			}
+				.left, .right {
+					width: 40%;
+				}
+				.left {
+					display: flex;
+					justify-content: center;
+					padding-right: 75px;
+					img {
+						object-fit: cover;
+						height: 100%;
+						width: 100%;
+						// max-width: 350px;
+						border: 1px solid #fff;
+						// border-radius: 50%;
+					}
+				} // .left
+				.right {
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					h3 {
+						font-size: 42px;
+						min-height: 60px;
+						margin-bottom: 10px;
+						font-family: monospace;
+					}
+					.separator{
+						&::before {
+							content: '';
+							margin: 15px 0 20px;
+							display: block;
+							width: 100%;
+							height: 1px;
+							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 50%);
+						}
+					}
+					p {
+						display: none;
+						font-size: 20px;
+						line-height: 1.7em;
+					}
+					.cndev_social_icons {
+						&::before {
+							content: '';
+							margin: 20px 0;
+							display: block;
+							width: 100%;
+							height: 1px;
+							background: linear-gradient(90deg, #ffffffa2 0%, #00000000 30%);
+						}
+						ul {
+							display: flex;
+							gap: 10px;
 
-		}
-    }
+							i {
+								font-size: 24px;
+							}
+						}
+					}
+				}
+			} // .cndev_section--content
+		} // *[data-content="about"]
+    } // &_section
 
 	&_projects {
 		display: flex;
@@ -510,7 +471,8 @@ section {
 				}
 			}
 		}
-	}
+	} // &_projects
+
 	&_footer {
 		position: absolute;
 		z-index: 1;
@@ -532,7 +494,7 @@ section {
 			font-size: 14px;
 			font-weight: 300;
 		}
-	}
+	} // &_footer
 
 	&_404 {
 		width: 100dvw;
@@ -541,5 +503,37 @@ section {
 		justify-content: center;
 		align-items: center;
 		text-align: center;
-	}
-}
+	} // $_404
+
+	&.scrolled {
+		.cndev_header {
+			&--content {
+				justify-content: space-between;
+			}
+			&--inner {
+				width: 1000px;
+				background: linear-gradient(360deg, #0807082a, #00000000);
+				backdrop-filter: blur(20px);
+			}
+			&--logo, &--scroll {
+				width: 10%;
+			}
+			&--logo {
+				justify-content: start;
+			}
+			&--nav {
+				width: 100%;
+				opacity: 1;
+				visibility: visible;
+				transform: translateY(0);
+				transition: opacity 500ms 450ms linear;
+			}
+			&--scroll {
+				visibility: visible;
+				opacity: 1;
+				text-align: end;
+				transition: opacity 500ms 450ms linear;
+			}
+		}
+	} // &_scrolled
+} // .cndev
