--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@
     Theme Name: caionunes.dev
     Description: Theme developed by myself to achieve design and features I wanted to implement in my portfolio.
     Version: 1.1.0
+	Requires at least: 6.3
     Author: Caio Nunes
     Author URI: https://caionunes.dev/
 
     License: GPL-3.0
     License URI: http://www.opensource.org/licenses/gpl-license.php
 
-    Text Domain: cn-dev
+    Text Domain: cndev
 */
