--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,7 +42,7 @@ html {
 }
 
 /* Animations */
-@mixin animate($animation,$duration,$method,$times){
+@mixin animate($animation, $duration, $method, $times){
     animation: $animation $duration $method $times;
 }
 @mixin keyframes($name){
@@ -84,6 +84,70 @@ section {
     display: flex;
     flex-direction: column;
 
+	li {
+        list-style: none;
+    }
+    a {
+        text-decoration: none;
+        color: inherit;
+		transition: all 200ms linear;
+    }
+
+	&_loader {
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: 1000000;
+		overflow: hidden;
+		width: 100dvw;
+		height: 100dvh;
+		background: linear-gradient(180deg, var(--primary-color), #0c0c0c);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 50px;
+
+		svg {
+			fill: #fff;
+		}
+		.hourglass {
+			width: 35px;
+			height: 35px;
+			transition: width 500ms 500ms, height 500ms 500ms, visibility 0ms 1000ms;
+			@include keyframes(spin) {
+				50%, 100% {
+					transform: rotate(180deg);
+				}
+			};
+			@include animate(spin, 900ms, linear, infinite);
+		}
+		.check {
+			transition: transform 500ms 1000ms;
+			margin-left: -20px;
+			width: 50px;
+			height: 50px;
+		}
+		&.loading {
+			.check {
+				visibility: hidden;
+				transform: scale(0);
+				transition: transform 500ms 500ms;
+			}
+		}
+
+		&.complete {
+			.hourglass {
+				width: 0px;
+				height: 0px;
+				visibility: hidden;
+			}
+			.check {
+				visibility: initial;
+				transform: scale(1);
+			}
+		}
+	} // &_loader
+
 	&_adm {
 		width: fit-content;
 		height: 100px;
@@ -110,7 +174,7 @@ section {
 		ul:hover {
 			opacity: 1;
 		}
-	}
+	} // &_adm
 
 	&_button {
 		padding: 10px 14px;
@@ -128,16 +192,7 @@ section {
 			background: #fff;
 			color: var(--primary-color);
 		}
-	}
-
-    li {
-        list-style: none;
-    }
-    a {
-        text-decoration: none;
-        color: inherit;
-		transition: all 200ms linear;
-    }
+	} // &_button
 
 	&_social_icons {
 		a {
@@ -151,7 +206,6 @@ section {
 			padding: 8px 10px;
 
 			span {
-				font-family: monospace;
 				font-size: 20px;
 				position: relative;
 				margin-left: -75px;
@@ -167,16 +221,15 @@ section {
 				color: var(--primary-color);
 				background: #fff;
 				gap: 8px;
-				padding: 8px 14px;
 
 				span {
 					visibility: initial;
-					margin-left: 0;
+					margin: 0;
 					opacity: 1;
 				}
 			}
 		}
-	}
+	} // &_social_icons
 
     &_particles {
         position: fixed;
@@ -212,7 +265,7 @@ section {
 			position: relative;
 			z-index: -2;
         }
-    } // &_particles - END
+    } // &_particles
 
     &_header {
         width: 100%;
@@ -245,7 +298,7 @@ section {
 			align-items: center;
         }
 		&--nav {
-			justify-content: end;
+			justify-content: flex-end;
 			visibility: hidden;
 			opacity: 0;    
 			position: relative;
@@ -480,7 +533,7 @@ section {
 
 					&--items {
 						display: flex;
-						justify-content: end;
+						justify-content: flex-end;
 						gap: 15px;
 
 						.project-thumb {
@@ -583,6 +636,11 @@ section {
 							}
 						}
 						.project-links {
+							display: flex;
+							flex-wrap: wrap;
+							justify-content: flex-end;
+							gap: 0 10px;
+
 							&::before {
 								content: '';
 								margin: 25px 0 20px;
@@ -592,8 +650,45 @@ section {
 								// background: linear-gradient(90deg, #00000000 35%, #ffffffa2 50%, #00000000 65%);
 								background: linear-gradient(240deg, #ffffffa2 0%, #00000000 30%);
 							}
+							a {
+								font-size: 18px;
+								border: 1px solid transparent;
+								border-radius: 30px;
+								display: flex;
+								justify-content: center;
+								align-items: center;
+								gap: 5px;
+
+								i {
+									font-size: 24px;
+								}
+								&.live-site {
+									border: 1px solid #fff;
+									padding: 8px 10px;
+
+									i {
+										font-size: 18px;
+									}
+								}
+								&.repo {
+									border: 1px solid transparent;
+									span {
+										display: none;
+									}
+									&:hover {
+										padding: 8px 10px;
+										span {
+											display: initial;
+										}
+									}
+								}
+								&:hover {
+									color: var(--primary-color);
+									background: #fff;
+								}
+							}
 						}
-					}
+					} // &--inner
 				} // .left
 				.right {
 					display: flex;
@@ -633,7 +728,7 @@ section {
 								object-fit: fill;
 							}
 						}
-					}
+					} // .pc-mockup
 
 					.mobile-mockup {
 						width: 138px;
@@ -671,64 +766,11 @@ section {
 								border-radius: 20px;
 							}
 						}
-					}
+					} // .mobile-mockup
 				} // .right
 			}
 		} // &[data-content="projects"]
     } // &_section
-
-	/*
-	&_projects {
-		display: flex;
-		gap: 20px;
-		
-		.project-wrap {
-			background: #fff;
-			border-radius: 15px;
-			padding: 20px;
-			box-shadow: 0px 0px 15px -2px #00000030;
-			display: flex;
-			flex-direction: column;
-			gap: 20px;
-			width: 100%;
-
-			.project-title-group {
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-
-				.project-technologies {
-					display: flex;
-					gap: 10px;
-
-					.tech {
-						background: var(--cndev-blue);
-						padding: 5px 8px;
-						color: #fff;
-						font-size: 14px;
-						border-radius: 5px;
-					}
-				}
-			}
-			.project-images-group {
-				img {
-					width: 100%;
-					height: auto;
-				}
-			}
-			.project-link {
-				a {
-					background: var(--cndev-red);
-					padding: 8px 12px;
-					border-radius: 10px;
-					color: #fff;
-					display: block;
-					width: fit-content;
-				}
-			}
-		}
-	} // &_projects
-	*/
 
 	&_footer {
 		position: absolute;
@@ -776,7 +818,7 @@ section {
 				width: 10%;
 			}
 			&--logo {
-				justify-content: start;
+				justify-content: flex-start;
 			}
 			&--nav {
 				width: 100%;
