--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -232,8 +232,8 @@ section {
 	} // &_social_icons
 
     &_particles {
-        position: absolute;
-        top: 0;
+        position: fixed;
+        bottom: 0;
         left: 0;
 		z-index: -2;
         width: 100%;
@@ -248,7 +248,7 @@ section {
 				width: 100vw;
 				height: 100vh;
 				z-index: -2;
-				background: linear-gradient(180deg, #21211b 0%, #0f0f0f 45%);
+				background: linear-gradient(180deg, #21211b -15%, #0f0f0f 35%);
 			}
 			&.bottom {
 				position: fixed;
@@ -287,12 +287,10 @@ section {
         }
 		&--inner {
 			width: 135px;
-			min-width: 135px;
 			max-width: 1000px;
 			border-radius: 50px;
 			padding: 0 30px;
-			transition: background 300ms;
-			background: #00000000;
+			transition: width 250ms linear, background 250ms linear;
 		}
         &--content {
             width: 100%;
@@ -336,16 +334,47 @@ section {
 				cursor: pointer;
 			}
 		}
+		&.scrolled {
+			.cndev_header--content {
+				justify-content: space-between;
+			}
+			.cndev_header--inner {
+				width: 1000px;
+				background: linear-gradient(360deg, #0807082a, #00000000);
+				backdrop-filter: blur(20px);
+			}
+			.cndev_header--logo, .cndev_header--scroll {
+				width: 10%;
+			}
+			.cndev_header--logo {
+				justify-content: flex-start;
+			}
+			.cndev_header--nav {
+				width: 100%;
+				opacity: 1;
+				visibility: visible;
+				transform: translateY(0);
+				transition: opacity 500ms 450ms linear;
+			}
+			.cndev_header--scroll {
+				visibility: visible;
+				opacity: 1;
+				text-align: end;
+				transition: opacity 500ms 450ms linear;
+			}
+		} // &_scrolled
     } // &_header
 
     &_section {
-		min-height: 100vh;
 		// background: linear-gradient(180deg, #00000000 0%, #080708cb 50%, var(--cndev-darker-blue) 100%);
 		width: 100%;
 		display: flex;
-		align-items: center;
-		position: relative;
 		z-index: 1;
+		position: fixed;
+		top: 0;
+		left: 0;
+		align-items: center;
+		height: 100vh;
 
 		p {
 			font-size: 20px;
@@ -439,15 +468,10 @@ section {
             } // fade-out-effect
         } // &[data-content="hero"]
 		&[data-content="about"] {
-            margin-top: 115vh;
-			align-items: flex-start;
-			min-height: 150vh;
-			
-			.cndev_section--inner {
-				display: none;
-				position: sticky;
-				top: 150px;
-			}
+			// .cndev_section--inner {
+			// 	position: sticky;
+			// 	top: 150px;
+			// }
 
 			.cndev_section--content {
 				display: flex;
@@ -520,16 +544,11 @@ section {
 			} // .cndev_section--content
 		} // &[data-content="about"]
 
-		&[data-content="projects"] {
-			padding-bottom: 50px;
-			align-items: flex-start;
-			min-height: 150vh;
-			
-			.cndev_section--inner {
-				display: none;
-				position: sticky;
-				top: 150px;
-			}
+		&.visible[data-content="projects"] {
+			// .cndev_section--inner {
+			// 	position: sticky;
+			// 	top: 150px;
+			// }
 
 			.cndev_section--content {
 				display: flex;
@@ -801,13 +820,16 @@ section {
     } // &_section
 
 	&_footer {
-		position: absolute;
+		position: fixed;
 		z-index: 1;
 		bottom: 0;
 		left: 0;
 		width: 100%;
 		padding-bottom: 30px;
 		text-align: center;
+		overflow: hidden;
+		transition: opacity 300ms linear;
+
 		&--inner {
 			max-width: 1400px;
 			margin: 0 auto;
@@ -831,41 +853,4 @@ section {
 		align-items: center;
 		text-align: center;
 	} // $_404
-
-	&.scrolled {
-		.cndev_header {
-			&--content {
-				justify-content: space-between;
-			}
-			&--inner {
-				width: 1000px;
-				background: linear-gradient(360deg, #0807082a, #00000000);
-				backdrop-filter: blur(20px);
-			}
-			&--logo, &--scroll {
-				width: 10%;
-			}
-			&--logo {
-				justify-content: flex-start;
-			}
-			&--nav {
-				width: 100%;
-				opacity: 1;
-				visibility: visible;
-				transform: translateY(0);
-				transition: opacity 500ms 450ms linear;
-			}
-			&--scroll {
-				visibility: visible;
-				opacity: 1;
-				text-align: end;
-				transition: opacity 500ms 450ms linear;
-			}
-		}
-		.cndev_section {
-			.fade-out-effect {
-				display: none;
-			}
-		}
-	} // &_scrolled
 } // .cndev
