--- a/inc/admin/assets/cndev-admin.css
+++ b/inc/admin/assets/cndev-admin.css
@@ -55,3 +55,63 @@
 #wpadminbar li:hover .cndev_admin-bar-item.dashicons {
 	color: #72aee6 !important;
 }
+
+.cndev__meta_links .switch {
+	position: relative;
+	display: inline-block;
+	width: 67px;
+	height: 34px;
+}
+
+.cndev__meta_links .switch input { 
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+.cndev__meta_links .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+	border-radius: 34px;
+}
+
+.cndev__meta_links .slider:before {
+	position: absolute;
+	content: "";
+	height: 26px;
+	width: 26px;
+	left: 4px;
+	bottom: 4px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+	border-radius: 50%;
+}
+
+.cndev__meta_links input:checked + .slider {
+	background-color: #2196F3;
+}
+
+.cndev__meta_links input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+.cndev__meta_links input:checked + .slider:before {
+	-webkit-transform: translateX(20px);
+	-ms-transform: translateX(20px);
+	transform: translateX(20px);
+}
+
+.cndev__meta_links .repo {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
